Uploaded french locale and fixed some mistakes in the english locale

--- a/app/frontend/html/templates/en/friends.html
+++ b/app/frontend/html/templates/en/friends.html
@@ -1,20 +1,20 @@
 <div class="form_container">
     <div class="form_body_xs">
-        <p class="form_title">Editar lista de amigos</p>
+        <p class="form_title">Edit friend list</p>
         <div class="form_field_with_button_container">
-            <input id="friend_name" class="form_field_with_button" placeholder="Nombre del amigo" type="text"/>
+            <input id="friend_name" class="form_field_with_button" placeholder="Friend name" type="text"/>
             <button class="form_embedded_submit_button" onclick="SendFriendRequest()"> +</button>
         </div>
         <div id="pr_friendbox_editor">
             <div class="pr_friend_item_editor" id="friend_template" hidden>
                 <img id="template_image" class="pr_friend_image" src="../media/placeholders/CK.jpg">
                 <div class="pr_friend_info">
-                    <p id="template_username" class="pr_friend_username">Amigo1</p>
-                    <p id="template_status" class="pr_friend_status_on">Conectado</p>
+                    <p id="template_username" class="pr_friend_username">Friend1</p>
+                    <p id="template_status" class="pr_friend_status_on">Connected</p>
                 </div>
                 <button class="pr_friend_delete" onclick="DeleteFriend(this.parentNode.id)">X</button>
             </div>
         </div>
-        <a href="#settings"><button class="form_main_button_fle">Volver</button></a>
+        <a href="#settings"><button class="form_main_button_fle">Return</button></a>
     </div>
 </div>
