--- a/app/frontend/html/templates/en/scores.html
+++ b/app/frontend/html/templates/en/scores.html
@@ -2,9 +2,9 @@
     <div id="sc_leaderboard_body">
         <table id="scoreboard">
             <tr>
-                <th class="sc_place">PUESTO</th>
-                <th class="sc_name">NOMBRE</th>
-                <th class="sc_prestige">PRESTIGIO</th>
+                <th class="sc_place">PLACE</th>
+                <th class="sc_name">NAME</th>
+                <th class="sc_prestige">PRESTIGE</th>
             </tr>
             <tr id="template_score" style="display: none;">
                 <td class="sc_content" id="template_rank">#1</td>
