--- a/app/frontend/html/templates/en/tournament_create.html
+++ b/app/frontend/html/templates/en/tournament_create.html
@@ -5,13 +5,13 @@
             <p class="form_title">Create new Tournament</p>
             <div class="tour_create_subscroll">
                 <input id="tournament_name" class="form_field_with_margin" type="text" placeholder="Tournament Name"/>
-                <input id="guest0" class="form_field_with_margin" type="text" placeholder="Jugador 1"/>
-                <input id="guest1" class="form_field_with_margin" type="text" placeholder="Jugador 2"/>
-                <input id="guest2" class="form_field_with_margin" type="text" placeholder="Jugador 3"/>
-                <input id="guest3" class="form_field_with_margin" type="text" placeholder="Jugador 4"/>
-                <input id="guest4" class="form_field_with_margin" type="text" placeholder="Jugador 5"/>
-                <input id="guest5" class="form_field_with_margin" type="text" placeholder="Jugador 6"/>
-                <input id="guest6" class="form_field_with_margin" type="text" placeholder="Jugador 7"/>
+                <input id="guest0" class="form_field_with_margin" type="text" placeholder="Player 1"/>
+                <input id="guest1" class="form_field_with_margin" type="text" placeholder="Player 2"/>
+                <input id="guest2" class="form_field_with_margin" type="text" placeholder="Player 3"/>
+                <input id="guest3" class="form_field_with_margin" type="text" placeholder="Player 4"/>
+                <input id="guest4" class="form_field_with_margin" type="text" placeholder="Player 5"/>
+                <input id="guest5" class="form_field_with_margin" type="text" placeholder="Player 6"/>
+                <input id="guest6" class="form_field_with_margin" type="text" placeholder="Player 7"/>
             </div>
             <button class="form_main_button" type="button" onclick="createTournament('pong')" >Create Tournament [Pong]</button>
             <button class="form_main_button_reduced_margin" type="button" onclick="createTournament('tic-tac-toe')" >Create Tournament [TTT]</button>
