--- a/app/frontend/html/templates/fr/home.html
+++ b/app/frontend/html/templates/fr/home.html
@@ -1,44 +1,40 @@
-<div id="splash_panel"><b>Two games.<br>Millions of<br>possibilities.</b>
-    <a href="#register"><div id="splash_subtitle">Show your skill!</div></a>
+<div id="splash_panel"><b>Deux jeux.<br>Des millions de<br>possibilités.</b>
+    <a href="#register"><div id="splash_subtitle">Démontrez votre savoir-faire!</div></a>
 </div>
 <div id="splash_center_panel">
-    Join now and start playing. Fun and<br>competition await you!
+    Inscrivez-vous maintenant et commencez à jouer. Amusement et<br>compétition vous attendent!
 </div>
 <div id="games_header">
-    <b>Get to know our games</b>
+    <b>Découvrez nos jeux</b>
 </div>
 <div id="games_textbox">
-    This is where true players meet! Two games, infinite<br>
-    possibilities to make friends, share strategies, and of course, win.<br>
-    Are you in?
+    C'est ici que les vrais joueurs se rencontrent ! Deux jeux, des possibilités<br>
+    infinies de se faire des amis, de partager des stratégies et, bien sûr, de gagner.<br>
+    Êtes-vous intéressé?
 </div>
 <div id="games_container">
     <a href="#pong">
     <div class="game_card">
         <div class="game_image">
-            <img src="media/pong.png" alt="Pong">
+            <img src="media/pong.png" alt="Pong" width="100%" height="100%">
         </div>
         <p class="game_title">PONG</p>
-        <p class="game_subtitle">Created by: </p>
     </div>
     </a>
     <a href="#tictactoe">
     <div class="game_card">
         <div class="game_image">
-            <img src="media/TicTacToe.png" width="100%" alt="TicTacToe">
+            <img src="media/TicTacToe.png" width="100%" alt="TicTacToe" height="100%">
         </div>
         <p class="game_title">TIC-TAC-TOE</p>
-        <p class="game_subtitle">Created by: </p>
     </div>
     </a>
 </div>
 <hr class="hr_footer">
 <div id="footer_container">
     <img id="footer_logo" src="media/Trascendence_Square_Logo.svg">
-    <p id="footer_credits">FT_Transcendence has been created by the team [NOMBRE] for 42 Málaga.<br><br>
-    [NAME 1] - [JOB PERFORMED]<br>
-    [NAME 2] - [JOB PERFORMED]<br>
-    [NAME 3] - [JOB PERFORMED]<br>
-    [NAME 4] - [JOB PERFORMED]<br>
-    [NAME 5] - [JOB PERFORMED]</p>
+    <p id="footer_credits">FT_Transcendence a été créé par l'équipe [nom] pour 42 Málaga.<br><br>
+        Membres de l'équipe: manujime - abeltran - jzaragoz - fragarci - anamarqu<br><br><br><br><br><br>
+        Politique de cookies: <i>Ce site n'utilise pas de cookies.</i></p>
 </div>
+    <!--footer here-->
