--- a/app/frontend/html/templates/fr/pong.html
+++ b/app/frontend/html/templates/fr/pong.html
@@ -1,18 +1,17 @@
 <div class="selection-container" id="selection-screen"></div>
-    <h1>Choose your mode</h1>
+    <h1>Choisissez votre mode</h1>
     <div class="selection-buttons">
-        <button id="two-players">2 Players</button>
-        <button id="one-player">1 Player</button>
+        <button id="two-players">2 Joueurs</button>
+        <button id="one-player">1 Joueur</button>
     </div>
-</div>
 
 <div class="selection-container" id="difficulty-screen">
-    <h1>Select Difficulty</h1>
+    <h1>Sélectionner la difficulté</h1>
     <div class="difficulty-buttons">
-        <button onclick="startGameWithDifficulty('easy')">Easy</button>
+        <button onclick="startGameWithDifficulty('easy')">Facile</button>
         <button onclick="startGameWithDifficulty('normal')">Normal</button>
-        <button onclick="startGameWithDifficulty('hard')">Hard</button>
-        <button onclick="startGameWithDifficulty('extreme')">Extreme</button>
+        <button onclick="startGameWithDifficulty('hard')">Difficile</button>
+        <button onclick="startGameWithDifficulty('extreme')">Extrême</button>
     </div>
 </div>
 
