--- a/app/frontend/html/templates/fr/2fa.html
+++ b/app/frontend/html/templates/fr/2fa.html
@@ -1,13 +1,13 @@
 
 <div class="form_container">
     <div class="form_body">
-        <p class="form_title">Login 2FA</p>
+        <p class="form_title">Connexion 2FA</p>
         <form id="loginForm" onsubmit="event.preventDefault(); AuthLb.verify2fa();">
-            <p class="form_label">USERNAME</p>
+            <p class="form_label">NOM</p>
             <input id="username" class="form_field" type="text" required/>
-            <p class="form_label">PASSWORD</p>
+            <p class="form_label">MOT DE PASSE</p>
             <input id="otp" class="form_field" type="password" required/>
-            <button type="submit" class="form_main_button">LOGIN</button>
+            <button type="submit" class="form_main_button">CONNEXION</button>
         </form>
     </div>
 </div>
