--- a/app/frontend/html/templates/fr/footer.html
+++ b/app/frontend/html/templates/fr/footer.html
@@ -1,7 +1,4 @@
 <img id="footer_logo" src="media/Trascendence_Square_Logo.svg">
-<p id="footer_credits">FT_Transcendence has been created by the team [NOMBRE] for 42 Málaga.<br><br>
-[NAME 1] - [JOB PERFORMED]<br>
-[NAME 2] - [JOB PERFORMED]<br>
-[NAME 3] - [JOB PERFORMED]<br>
-[NAME 4] - [JOB PERFORMED]<br>
-[NAME 5] - [JOB PERFORMED]</p>
+<p id="footer_credits">FT_Transcendence a été créé par l'équipe [nom] pour 42 Málaga.<br><br>
+    Membres de l'équipe: manujime - abeltran - jzaragoz - fragarci - anamarqu<br><br><br><br><br><br>
+    Politique de cookies: <i>Ce site n'utilise pas de cookies.</i></p>
