--- a/app/frontend/html/templates/es/profile.html
+++ b/app/frontend/html/templates/es/profile.html
@@ -31,7 +31,7 @@
         <div class="pr_stats_container">
             <div id="pr_history" style="display: none;">
                 <p class="pr_stats_header">HISTORIAL</p>
-                <div id="pr_history_template_won">
+                <div id="pr_history_template_won" style="display: none;">
                     <div class="pr_history_item">
                         <p class="pr_history_item_title" id="pr_history_title_template"></p>
                         <p class="pr_history_item_winner" id="pr_history_winner_template"></p>
@@ -39,7 +39,7 @@
                     </div>
                     <hr class="hr_stats">
                 </div>
-                <div id="pr_history_template_lost">
+                <div id="pr_history_template_lost" style="display: none;">
                     <div class="pr_history_item">
                         <p class="pr_history_item_title" id="pr_history_title_template"></p>
                         <p class="pr_history_item_opponent" id="pr_history_opponent_template"></p>
@@ -77,11 +77,6 @@
             <div class="pr_stats_item">
                 <p class="pr_stats_text">Derrotas</p>
                 <p class="pr_stats_losses" id="ttt_losses"></p>
-            </div>
-            <hr class="hr_stats" style="display: none;">
-            <div class="pr_stats_item" style="display: none;">
-                <p class="pr_stats_text">Empates</p>
-                <p class="pr_stats_draws" id="ttt_ties"></p>
             </div>
             <hr class="hr_stats">
             <div class="pr_stats_item">
