--- a/app/frontend/html/templates/fr/profile.html
+++ b/app/frontend/html/templates/fr/profile.html
@@ -31,7 +31,7 @@
         <div class="pr_stats_container">
             <div id="pr_history" style="display: none;">
                 <p class="pr_stats_header">HISTOIRE</p>
-                <div id="pr_history_template_won">
+                <div id="pr_history_template_won" style="display: none;">
                     <div class="pr_history_item">
                         <p class="pr_history_item_title" id="pr_history_title_template"></p>
                         <p class="pr_history_item_winner" id="pr_history_winner_template"></p>
@@ -40,7 +40,7 @@
                     <hr class="hr_stats">
                 </div>
                 <div id="pr_history_template_lost">
-                    <div class="pr_history_item">
+                    <div class="pr_history_item" style="display: none;">
                         <p class="pr_history_item_title" id="pr_history_title_template"></p>
                         <p class="pr_history_item_opponent" id="pr_history_opponent_template"></p>
                         <p class="pr_history_item_loser" id="pr_history_loser_template"></p>
@@ -77,11 +77,6 @@
             <div class="pr_stats_item">
                 <p class="pr_stats_text">Pertes</p>
                 <p class="pr_stats_losses" id="ttt_losses"></p>
-            </div>
-            <hr class="hr_stats">
-            <div class="pr_stats_item">
-                <p class="pr_stats_text">Cravates</p>
-                <p class="pr_stats_draws" id="ttt_ties"></p>
             </div>
             <hr class="hr_stats">
             <div class="pr_stats_item">
