--- a/app/frontend/css/basic.css
+++ b/app/frontend/css/basic.css
@@ -65,13 +65,6 @@
     margin: 5px;
 }
 
-/* .alert_container {
-    padding-top: 90px;
-    padding-left: 20px;
-    padding-right: 20px;
-    z-index: 1;
-} */
-
 .alert_container {
     position: fixed;
     top: 20%;
@@ -82,4 +75,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#pr_history {
+    overflow: scroll;
+    scrollbar-width: none;
+}
+
+.flag {
+    padding: 0px;
 }
