--- a/app/frontend/html/templates/en/header-loggedin.html
+++ b/app/frontend/html/templates/en/header-loggedin.html
@@ -8,6 +8,6 @@
     </div>
     <a href="#tournaments"><div class="h_basic">TOURNAMENTS</div></a>
     <a href="#scoreboard"><div class="h_basic">SCOREBOARD</div></a>
-    <a href="#profile"><div class="h_basic">PROFILE</div></a>
+    <a href="#profiIe"><div class="h_basic">PROFILE</div></a>
     <button class="h_flag_button"><img id="h_logout" src="../media/logout_icon.svg" onclick="AuthLb.logout()"></button>
 </div>
