check that the winner is valid at the end of the tournament

--- a/app/frontend/html/templates/en/alert.html
+++ b/app/frontend/html/templates/en/alert.html
@@ -171,3 +171,7 @@
 <div class="alert alert-danger" role="alert" id="no-tournament-to-end" onclick="hideAlert(this)" style="display: none;">
     No tournament to end
 </div>
+
+ <div class="alert alert-danger" role="alert" id="winner-not-in-tournament?" onclick="hideAlert(this)" style="display: none;">
+    Winner is not in the tournament
+</div>
