--- a/app/frontend/html/templates/es/alert.html
+++ b/app/frontend/html/templates/es/alert.html
@@ -167,3 +167,7 @@
 <div class="alert alert-danger" role="alert" id="invalid-tournament-name" onclick="hideAlert(this)" style="display: none;">
     Nombre del torneo inválido
 </div>
+
+<div class="alert alert-danger" role="alert" id="winner-not-in-tournament?" onclick="hideAlert(this)" style="display: none;">
+    El ganador no está en el torneo
+</div>
