--- a/app/frontend/html/templates/fr/alert.html
+++ b/app/frontend/html/templates/fr/alert.html
@@ -171,3 +171,7 @@
 <div class="alert alert-danger" role="alert" id="no-tournament-to-end" onclick="hideAlert(this)" style="display: none;">
     Pas de tournoi pour terminer
 </div>
+
+<div class="alert alert-danger" role="alert" id="winner-not-in-tournament?" onclick="hideAlert(this)" style="display: none;">
+    Le gagnant n'est pas dans le tournoi
+</div>
