tournament creation back button

--- a/app/frontend/html/templates/en/tournament_create.html
+++ b/app/frontend/html/templates/en/tournament_create.html
@@ -15,7 +15,7 @@
             </div>
             <button class="form_main_button" type="button" onclick="createTournament('pong')" >Create Tournament [Pong]</button>
             <button class="form_main_button_reduced_margin" type="button" onclick="createTournament('tic-tac-toe')" >Create Tournament [TTT]</button>
-            <button class="form_settings_button" type="button">Back</button>
+            <button class="form_settings_button" type="button" onclick="changeLocation('#tournaments')">Back</button>
         </div>
     </div>
 </form>
