--- a/app/frontend/html/templates/fr/tournament_create.html
+++ b/app/frontend/html/templates/fr/tournament_create.html
@@ -15,7 +15,7 @@
             </div>
             <button class="form_main_button" type="button" onclick="createTournament('pong')" >Créer un tournoi [Pong]</button>
             <button class="form_main_button_reduced_margin" type="button" onclick="createTournament('tic-tac-toe')" >Créer un tournoi [TTT]</button>
-            <button class="form_settings_button" type="button">Sortie</button>
+            <button class="form_settings_button" type="button" onclick="changeLocation('#tournaments')" >Sortie</button>
         </div>
     </div>
 </form>
