--- a/app/frontend/html/templates/es/tournament_create.html
+++ b/app/frontend/html/templates/es/tournament_create.html
@@ -15,7 +15,7 @@
             </div>
             <button class="form_main_button" type="button" onclick="createTournament('pong')" >Crear Torneo [Pong]</button>
             <button class="form_main_button_reduced_margin" type="button" onclick="createTournament('tic-tac-toe')" >Crear Torneo [TTT]</button>
-            <button class="form_settings_button" type="button">Volver</button>
+            <button class="form_settings_button" type="button" onclick="changeLocation('#tournaments')">Volver</button>
         </div>
     </div>
 </form>
